# exotica_cmake_standalone_example

./: CMakeLists.txt  README.md
resources/: j1n6srobotiq.srdf  j1n6srobotiq.urdf  kinova_ik.xml
src/: ik_minimal.cpp
